--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -355,57 +355,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 3, 4, 2, 6, 8, 0, 6, 10]\n",
+      "[7, 3, 3, 6, 5, 0, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "sentences_main_word_index = find_main_span(default_word_event_similarity)\n",
-    "housein_sentences_main_word_index = find_main_span(housein_word_event_similarity)"
+    "housein_sentences_main_word_index = find_main_span(housein_word_event_similarity)\n",
+    "\n",
+    "print(sentences_main_word_index)\n",
+    "print(housein_sentences_main_word_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "def convert_word_pos_to_span(sentences_main_word_index_input, sentences_input, sentences_tokens_input):\n",
     "    span_list = []\n",
     "    for i in range(len(sentences_input)):\n",
-    "        span_list.append(' '.join(sentences_input[i]).find(sentences_tokens_input[sentences_main_word_index_input[i]]))\n",
+    "        initial_index = ' '.join(sentences_input[i]).find(sentences_tokens_input[i][sentences_main_word_index_input[i]])\n",
+    "        span_list.append([initial_index, initial_index + len(sentences_input[i][sentences_main_word_index_input[i]])])\n",
     "    return span_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "must be str, not list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/mahdi/University/Master/CS/Term 4/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb Cell 21'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mahdi/University/Master/CS/Term%204/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb#ch0000020?line=0'>1</a>\u001b[0m convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mahdi/University/Master/CS/Term%204/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb#ch0000020?line=1'>2</a>\u001b[0m \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(sentences_tokens[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m])\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mahdi/University/Master/CS/Term%204/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb#ch0000020?line=2'>3</a>\u001b[0m sentences_tokens[\u001b[39m0\u001b[39m]\n",
-      "\u001b[1;32m/home/mahdi/University/Master/CS/Term 4/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb Cell 20'\u001b[0m in \u001b[0;36mconvert_word_pos_to_span\u001b[0;34m(sentences_main_word_index_input, sentences_input, sentences_tokens_input)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mahdi/University/Master/CS/Term%204/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb#ch0000019?line=1'>2</a>\u001b[0m span_list \u001b[39m=\u001b[39m []\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mahdi/University/Master/CS/Term%204/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb#ch0000019?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(sentences_input)):\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/mahdi/University/Master/CS/Term%204/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb#ch0000019?line=3'>4</a>\u001b[0m     span_list\u001b[39m.\u001b[39mappend(\u001b[39m'\u001b[39;49m\u001b[39m \u001b[39;49m\u001b[39m'\u001b[39;49m\u001b[39m.\u001b[39;49mjoin(sentences_input[i])\u001b[39m.\u001b[39;49mfind(sentences_tokens_input[sentences_main_word_index_input[i]]))\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/mahdi/University/Master/CS/Term%204/NLP/CA/NLP/CA1/CA1/Notebooks/main.ipynb#ch0000019?line=4'>5</a>\u001b[0m \u001b[39mreturn\u001b[39;00m span_list\n",
-      "\u001b[0;31mTypeError\u001b[0m: must be str, not list"
-     ]
+     "data": {
+      "text/plain": [
+       "[[38, 42], [14, 19], [10, 15], [36, 39], [31, 37], [0, 6], [10, 14]]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens)\n",
-    "' '.join(sentences_tokens[0][0])\n",
-    "sentences_tokens[0]"
+    "print(convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
+    "convert_word_pos_to_span(housein_sentences_main_word_index, housein_sentences, housein_sentences_tokens)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
