cleaning the code

--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,25 +11,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random \n",
+    "import numpy as np\n",
+    "import nltk\n",
+    "import codecs\n",
+    "import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 126673.61it/s]\n",
-      "100%|██████████| 7/7 [00:00<00:00, 112061.56it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 158875.15it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 112014.05it/s]\n",
+      "100%|██████████| 7/7 [00:00<00:00, 115137.76it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 166440.63it/s]\n"
      ]
     }
    ],
    "source": [
-    "import random \n",
-    "import numpy as np\n",
-    "import nltk\n",
-    "import codecs\n",
-    "import tqdm\n",
+    "\"\"\"importing the filess\"\"\"\n",
     "\n",
     "sentences = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/test_sentences.txt','rU','utf-8').readlines())]\n",
     "housein_sentences = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/housein_tests.txt','rU','utf-8').readlines())]\n",
@@ -38,22 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 18696.75it/s]\n",
-      "100%|██████████| 7/7 [00:00<00:00, 12243.59it/s]\n",
-      "100%|██████████| 9/9 [00:00<00:00, 3144.16it/s]\n",
-      "100%|██████████| 7/7 [00:00<00:00, 5326.58it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 5263.28it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 10422.07it/s]\n",
+      "100%|██████████| 7/7 [00:00<00:00, 19945.74it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 4715.64it/s]\n",
+      "100%|██████████| 7/7 [00:00<00:00, 5409.01it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 5181.35it/s]\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"normalizing the text\"\"\"\n",
+    "\n",
     "from __future__ import unicode_literals\n",
     "from hazm import *\n",
     "\n",
@@ -70,23 +81,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 9994.37it/s]\n",
-      "100%|██████████| 9/9 [00:00<00:00, 78316.88it/s]\n",
-      "100%|██████████| 7/7 [00:00<00:00, 11240.48it/s]\n",
-      "100%|██████████| 7/7 [00:00<00:00, 102300.10it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 17119.61it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 94679.55it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 11697.78it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 84828.62it/s]\n",
+      "100%|██████████| 7/7 [00:00<00:00, 13171.88it/s]\n",
+      "100%|██████████| 7/7 [00:00<00:00, 45590.26it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 14084.30it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 84222.97it/s]\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"tokenizing the text\"\"\"\n",
+    "\n",
     "from nltk.tokenize import RegexpTokenizer\n",
     "\n",
     "tokenizer = RegexpTokenizer(r'\\w+')\n",
@@ -104,34 +117,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<00:00, 38440.67it/s]\n",
-      "100%|██████████| 7/7 [00:00<00:00, 39891.48it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 58579.66it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 49669.39it/s]\n",
+      "100%|██████████| 7/7 [00:00<00:00, 47127.01it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 72565.81it/s]\n"
      ]
     }
    ],
    "source": [
-    "stemmer = Stemmer()\n",
+    "\"\"\"lemmatization of the text\"\"\"\n",
+    "\n",
     "lemmatizer = Lemmatizer()\n",
     "\n",
-    "# sentences_stemmed = [[stemmer.stem(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(sentences_tokens)]\n",
     "sentences_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(sentences_tokens)]\n",
     "housein_sentences_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(housein_sentences_tokens)]\n",
-    "\n",
-    "# events_stemmed = [[stemmer.stem(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(events_tokens)]\n",
     "events_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(events_tokens)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,6 +188,8 @@
     }
    ],
    "source": [
+    "\"\"\"getting the synset ids of the lemmatized text\"\"\"\n",
+    "\n",
     "sentences_synset_id = [[client_synset_service.service.getSynsetsByWord(token, 'EXACT', word) for word in sent] for sent in tqdm.tqdm(sentences_lemmatied)]"
    ]
   },
@@ -194,23 +207,27 @@
     }
    ],
    "source": [
+    "\"\"\"getting the synset ids of the lemmatized text\"\"\"\n",
+    "\n",
     "housein_sentences_synset_id = [[client_synset_service.service.getSynsetsByWord(token, 'EXACT', word) for word in sent] for sent in tqdm.tqdm(housein_sentences_lemmatied)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:53<00:00, 11.35s/it]\n"
+      "100%|██████████| 10/10 [01:50<00:00, 11.10s/it]\n"
      ]
     }
    ],
    "source": [
+    "\"\"\"getting the synset ids of the lemmatized text\"\"\"\n",
+    "\n",
     "events_synset_id = [[client_synset_service.service.getSynsetsByWord(token, 'EXACT', word) for word in sent] for sent in tqdm.tqdm(events_lemmatied)]"
    ]
   },
@@ -230,6 +247,8 @@
     }
    ],
    "source": [
+    "\"\"\"extracting the synset ids of the lemmatized text\"\"\"\n",
+    "\n",
     "sentences_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(sentences_synset_id)]\n",
     "housein_sentences_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(housein_sentences_synset_id)]\n",
     "events_synset_id_list = [[[synset.id for synset in word] for word in sent] for sent in tqdm.tqdm(events_synset_id)]"
@@ -237,13 +256,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# comparing the ids of words in sentences with words in events with\n",
-    "\n",
     "def count_similar_events(synset_id_input, events_synset_id_list_input):\n",
+    "    \n",
+    "    \"\"\"this function compares the id of words in sentences with id of words in events\"\"\"\n",
+    "\n",
     "    count_list = []\n",
     "    for event_synset_id_list in events_synset_id_list_input:\n",
     "        count = 0\n",
@@ -252,16 +272,13 @@
     "                count += 1\n",
     "        count_list.append(count)\n",
     "\n",
-    "    return count_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return count_list\n",
+    "\n",
+    "\n",
     "def count_similar_sentences(sentences_synset_id_list_input, events_synset_id_list_input):\n",
+    "\n",
+    "    \"\"\"this function creates a list of similarity scores which contains similarity between each event and each word\"\"\"\n",
+    "\n",
     "    count_list = []\n",
     "    for sentence_synset_id_list in sentences_synset_id_list_input:\n",
     "        count_list_sentence = []\n",
@@ -272,26 +289,13 @@
     "            count_list_sentence.append(count_list_word)\n",
     "        count_list.append(count_list_sentence)\n",
     "\n",
-    "    return count_list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "similarity_list = count_similar_sentences(sentences_synset_id_list, events_synset_id_list)\n",
-    "housein_similarity_list = count_similar_sentences(housein_sentences_synset_id_list, events_synset_id_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return count_list\n",
+    "\n",
+    "\n",
     "def calculate_word_event_similarity(similarity_list_input):\n",
+    "\n",
+    "    \"\"\"this function calculates the similarity score of each word with each event\"\"\"\n",
+    "\n",
     "    similarity_list_output = []\n",
     "    for sentence in similarity_list_input:\n",
     "        sentence_similarity_list = []\n",
@@ -302,16 +306,13 @@
     "            sentence_similarity_list.append(word_similarity_list)\n",
     "        similarity_list_output.append(sentence_similarity_list)\n",
     "    \n",
-    "    return similarity_list_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return similarity_list_output\n",
+    "    \n",
+    "\n",
     "def calculate_sentence_event_similarity(similarity_list_input):\n",
+    "\n",
+    "    \"\"\"this function calculates the similarity score of each sentence with each event\"\"\"\n",
+    "    \n",
     "    similarity_list_output = []\n",
     "    for sentence in similarity_list_input:\n",
     "        sentence_similarity_list = np.array([0,0,0,0,0,0,0,0,0,0])\n",
@@ -325,37 +326,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity_list = count_similar_sentences(sentences_synset_id_list, events_synset_id_list)\n",
+    "housein_similarity_list = count_similar_sentences(housein_sentences_synset_id_list, events_synset_id_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
     "default_word_event_similarity = calculate_word_event_similarity(similarity_list)\n",
     "default_sentence_event_similarity = calculate_sentence_event_similarity(similarity_list)\n",
-    "# print(default_word_event_similarity_list)\n",
-    "# print(default_sentence_event_similarity)\n",
     "\n",
     "housein_word_event_similarity = calculate_word_event_similarity(housein_similarity_list)\n",
-    "housein_sentence_event_similarity = calculate_sentence_event_similarity(housein_similarity_list)\n",
-    "# print(housein_word_event_similarity)\n",
-    "# print(housein_sentence_event_similarity)"
+    "housein_sentence_event_similarity = calculate_sentence_event_similarity(housein_similarity_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_main_span(word_event_similarity_list_input):\n",
+    "\n",
+    "    \"\"\"this function finds the top score word of the sentence to find the main span and related desired event\"\"\"\n",
+    "\n",
     "    main_span_list = []\n",
     "    for sentence in word_event_similarity_list_input:\n",
     "        main_span_list.append(np.argmax([word[np.argmax(word)] for word in sentence]))\n",
-    "    return main_span_list"
+    "    return main_span_list\n",
+    "\n",
+    "def convert_word_pos_to_span(sentences_main_word_index_input, sentences_input, sentences_tokens_input):\n",
+    "\n",
+    "    \"\"\"this function converts the word index to its span in the sentence\"\"\"\n",
+    "\n",
+    "    span_list = []\n",
+    "    for i in range(len(sentences_input)):\n",
+    "        initial_index = ' '.join(sentences_input[i]).find(sentences_tokens_input[i][sentences_main_word_index_input[i]])\n",
+    "        span_list.append([initial_index, initial_index + len(sentences_input[i][sentences_main_word_index_input[i]])])\n",
+    "    return span_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -377,37 +397,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def convert_word_pos_to_span(sentences_main_word_index_input, sentences_input, sentences_tokens_input):\n",
-    "    span_list = []\n",
-    "    for i in range(len(sentences_input)):\n",
-    "        initial_index = ' '.join(sentences_input[i]).find(sentences_tokens_input[i][sentences_main_word_index_input[i]])\n",
-    "        span_list.append([initial_index, initial_index + len(sentences_input[i][sentences_main_word_index_input[i]])])\n",
-    "    return span_list"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[[38, 42], [14, 19], [10, 15], [36, 39], [31, 37], [0, 6], [10, 14]]"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [33, 38], [51, 54]]\n",
+      "[[38, 42], [14, 19], [10, 15], [36, 39], [31, 37], [0, 6], [10, 14]]\n"
+     ]
     }
    ],
    "source": [
     "print(convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
-    "convert_word_pos_to_span(housein_sentences_main_word_index, housein_sentences, housein_sentences_tokens)"
+    "print(convert_word_pos_to_span(housein_sentences_main_word_index, housein_sentences, housein_sentences_tokens))"
    ]
   }
  ],
