--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,38 +321,9 @@
     "                sentence_similarity_list += id\n",
     "        similarity_list_output.append(sentence_similarity_list)\n",
     "    \n",
-    "    return similarity_list_output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "similarity_list = count_similar_sentences(sentences_synset_id_list, events_synset_id_list)\n",
-    "housein_similarity_list = count_similar_sentences(housein_sentences_synset_id_list, events_synset_id_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "default_word_event_similarity = calculate_word_event_similarity(similarity_list)\n",
-    "default_sentence_event_similarity = calculate_sentence_event_similarity(similarity_list)\n",
+    "    return similarity_list_output\n",
     "\n",
-    "housein_word_event_similarity = calculate_word_event_similarity(housein_similarity_list)\n",
-    "housein_sentence_event_similarity = calculate_sentence_event_similarity(housein_similarity_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "def find_main_span(word_event_similarity_list_input):\n",
     "\n",
     "    \"\"\"this function finds the top score word of the sentence to find the main span and related desired event\"\"\"\n",
@@ -361,6 +332,7 @@
     "    for sentence in word_event_similarity_list_input:\n",
     "        main_span_list.append(np.argmax([word[np.argmax(word)] for word in sentence]))\n",
     "    return main_span_list\n",
+    "\n",
     "\n",
     "def convert_word_pos_to_span(sentences_main_word_index_input, sentences_input, sentences_tokens_input):\n",
     "\n",
@@ -375,50 +347,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 3, 4, 2, 6, 8, 0, 6, 10]\n",
-      "[7, 3, 3, 6, 5, 0, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sentences_main_word_index = find_main_span(default_word_event_similarity)\n",
-    "housein_sentences_main_word_index = find_main_span(housein_word_event_similarity)\n",
-    "\n",
-    "print(sentences_main_word_index)\n",
-    "print(housein_sentences_main_word_index)"
+    "similarity_list = count_similar_sentences(sentences_synset_id_list, events_synset_id_list)\n",
+    "housein_similarity_list = count_similar_sentences(housein_sentences_synset_id_list, events_synset_id_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "default_word_event_similarity = calculate_word_event_similarity(similarity_list)\n",
+    "default_sentence_event_similarity = calculate_sentence_event_similarity(similarity_list)\n",
+    "\n",
+    "housein_word_event_similarity = calculate_word_event_similarity(housein_similarity_list)\n",
+    "housein_sentence_event_similarity = calculate_sentence_event_similarity(housein_similarity_list)\n",
+    "\n",
+    "sentences_main_word_index = find_main_span(default_word_event_similarity)\n",
+    "housein_sentences_main_word_index = find_main_span(housein_word_event_similarity)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "default_sentence_event_similarity:  [array([ 0,  0,  0,  0, 10,  0,  0,  0,  0,  0]), array([0, 0, 0, 3, 0, 0, 0, 0, 0, 0]), array([0, 0, 8, 0, 0, 0, 0, 0, 0, 0]), array([0, 0, 0, 0, 0, 0, 0, 0, 4, 0]), array([ 0, 11,  0,  0,  0,  0,  0,  0,  0,  0]), array([ 0,  0,  0,  0,  0,  0,  0,  0,  4, 10]), array([9, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([ 0,  0,  0,  0,  0, 21,  0,  0,  0,  0]), array([ 0,  0,  0,  0,  0,  0,  0, 16,  0,  0])]\n",
+      "\n",
+      "housein_sentence_event_similarity:  [array([0, 0, 0, 0, 0, 0, 8, 0, 0, 0]), array([ 0,  0,  0,  0,  0, 21,  0,  0,  0,  0]), array([0, 0, 2, 0, 0, 0, 0, 0, 0, 0]), array([ 0,  0,  0,  0,  0,  0,  0, 20,  0,  0]), array([8, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([ 0,  0,  0,  0,  0,  0,  0,  0,  4, 10]), array([0, 6, 0, 0, 0, 0, 0, 0, 0, 0])]\n",
+      "\n",
       "[[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [33, 38], [51, 54]]\n",
-      "[[38, 42], [14, 19], [10, 15], [36, 39], [31, 37], [0, 6], [10, 14]]\n"
+      "\n",
+      "[[38, 42], [14, 19], [10, 15], [36, 39], [31, 37], [0, 6], [10, 14]]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "print(convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
-    "print(convert_word_pos_to_span(housein_sentences_main_word_index, housein_sentences, housein_sentences_tokens))"
+    "print(\"default_sentence_event_similarity: \", default_sentence_event_similarity)\n",
+    "print()\n",
+    "print(\"housein_sentence_event_similarity: \", housein_sentence_event_similarity)\n",
+    "print()\n",
+    "print(\"default_main_word_span\", convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
+    "print()\n",
+    "print(\"default_main_word_span\", convert_word_pos_to_span(housein_sentences_main_word_index, housein_sentences, housein_sentences_tokens))\n",
+    "print()\n"
    ]
   }
  ],
