--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -368,37 +368,40 @@
     "housein_sentence_event_similarity = calculate_sentence_event_similarity(housein_similarity_list)\n",
     "\n",
     "sentences_main_word_index = find_main_span(default_word_event_similarity)\n",
-    "housein_sentences_main_word_index = find_main_span(housein_word_event_similarity)"
+    "housein_sentences_main_word_index = find_main_span(housein_word_event_similarity)\n",
+    "\n",
+    "default_related_event = [np.argmax(sentence) for sentence in default_sentence_event_similarity]\n",
+    "housein_related_event = [np.argmax(sentence) for sentence in housein_sentence_event_similarity]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "default_sentence_event_similarity:  [array([ 0,  0,  0,  0, 10,  0,  0,  0,  0,  0]), array([0, 0, 0, 3, 0, 0, 0, 0, 0, 0]), array([0, 0, 8, 0, 0, 0, 0, 0, 0, 0]), array([0, 0, 0, 0, 0, 0, 0, 0, 4, 0]), array([ 0, 11,  0,  0,  0,  0,  0,  0,  0,  0]), array([ 0,  0,  0,  0,  0,  0,  0,  0,  4, 10]), array([9, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([ 0,  0,  0,  0,  0, 21,  0,  0,  0,  0]), array([ 0,  0,  0,  0,  0,  0,  0, 16,  0,  0])]\n",
+      "default_sentence_event_similarity:  [4, 3, 2, 8, 1, 9, 0, 5, 7]\n",
       "\n",
-      "housein_sentence_event_similarity:  [array([0, 0, 0, 0, 0, 0, 8, 0, 0, 0]), array([ 0,  0,  0,  0,  0, 21,  0,  0,  0,  0]), array([0, 0, 2, 0, 0, 0, 0, 0, 0, 0]), array([ 0,  0,  0,  0,  0,  0,  0, 20,  0,  0]), array([8, 0, 0, 0, 0, 0, 0, 0, 0, 0]), array([ 0,  0,  0,  0,  0,  0,  0,  0,  4, 10]), array([0, 6, 0, 0, 0, 0, 0, 0, 0, 0])]\n",
+      "housein_sentence_event_similarity:  [6, 5, 2, 7, 0, 9, 1]\n",
       "\n",
-      "[[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [33, 38], [51, 54]]\n",
+      "default_main_word_span [[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [33, 38], [51, 54]]\n",
       "\n",
-      "[[38, 42], [14, 19], [10, 15], [36, 39], [31, 37], [0, 6], [10, 14]]\n",
+      "housein_main_word_span [[38, 42], [14, 19], [10, 15], [36, 39], [31, 37], [0, 6], [10, 14]]\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(\"default_sentence_event_similarity: \", default_sentence_event_similarity)\n",
+    "print(\"default_related_event: \", [np.argmax(sentence) for sentence in default_sentence_event_similarity])\n",
     "print()\n",
-    "print(\"housein_sentence_event_similarity: \", housein_sentence_event_similarity)\n",
+    "print(\"housein_related_event: \", [np.argmax(sentence) for sentence in housein_sentence_event_similarity])\n",
     "print()\n",
     "print(\"default_main_word_span\", convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
     "print()\n",
-    "print(\"default_main_word_span\", convert_word_pos_to_span(housein_sentences_main_word_index, housein_sentences, housein_sentences_tokens))\n",
+    "print(\"housein_main_word_span\", convert_word_pos_to_span(housein_sentences_main_word_index, housein_sentences, housein_sentences_tokens))\n",
     "print()\n"
    ]
   }
