--- a/CA1/CA1/Notebooks/main.ipynb
+++ b/CA1/CA1/Notebooks/main.ipynb
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "default_sentence_event_similarity:  [4, 3, 2, 8, 1, 9, 0, 5, 7]\n",
+      "default_related_event:  [4, 3, 2, 8, 1, 9, 0, 5, 7]\n",
       "\n",
-      "housein_sentence_event_similarity:  [6, 5, 2, 7, 0, 9, 1]\n",
+      "housein_related_event:  [6, 5, 2, 7, 0, 9, 1]\n",
       "\n",
       "default_main_word_span [[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [33, 38], [51, 54]]\n",
       "\n",
@@ -395,9 +395,9 @@
     }
    ],
    "source": [
-    "print(\"default_related_event: \", [np.argmax(sentence) for sentence in default_sentence_event_similarity])\n",
+    "print(\"default_related_event: \", default_related_event)\n",
     "print()\n",
-    "print(\"housein_related_event: \", [np.argmax(sentence) for sentence in housein_sentence_event_similarity])\n",
+    "print(\"housein_related_event: \", housein_related_event)\n",
     "print()\n",
     "print(\"default_main_word_span\", convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
     "print()\n",
