adding the test file and also cleaning the main file to be ready to merge

--- a/CA1/CA1/Notebooks/test.ipynb
+++ b/CA1/CA1/Notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,148 +24,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:00<00:00, 149796.57it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 76881.34it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 87199.67it/s]\n"
      ]
     }
    ],
    "source": [
-    "\"\"\"getting the sentences and events\"\"\"\n",
+    "\"\"\"importing the filess\"\"\"\n",
     "\n",
-    "# sentences = [input().strip().split()]\n",
-    "sentences = [\"گفتگوهای صلح اوکراین، فردا از سر گرفته خواهد شد.\".strip().split()]\n",
+    "# default sentences\n",
+    "sentences = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/test_sentences.txt','rU','utf-8').readlines())]\n",
+    "\n",
+    "# housein sentences\n",
+    "# sentences = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/housein_tests.txt','rU','utf-8').readlines())]\n",
+    "\n",
     "events = [x.strip().split() for x in tqdm.tqdm(codecs.open(F'{path_dir}/Data/events.txt','rU','utf-8').readlines())]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import unicode_literals\n",
-    "from hazm import *\n",
-    "from nltk.tokenize import RegexpTokenizer\n",
-    "\n",
-    "def normalize_inputs(sentences_, events_):\n",
-    "    normalizer = Normalizer()\n",
-    "    sentences_normalized_by_sentence = [normalizer.normalize(' '.join(x)) for x in tqdm.tqdm(sentences_)]\n",
-    "    sentences_normalized_by_word = [[normalizer.normalize(y) for y in x.strip().split()] for x in tqdm.tqdm(sentences_normalized_by_sentence)]\n",
-    "    events_normalized = [[normalizer.normalize(y) for y in x] for x in tqdm.tqdm(events_)]\n",
-    "\n",
-    "    return sentences_normalized_by_word, events_normalized\n",
-    "\n",
-    "\n",
-    "def tokenize_inputs(sentences_, events_):\n",
-    "    tokenizer = RegexpTokenizer(r'\\w+')\n",
-    "    sentences_no_punctuation = [tokenizer.tokenize(' '.join(sent)) for sent in sentences_ ]\n",
-    "    temp_sentences_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(sentences_no_punctuation)]\n",
-    "    sentences_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_sentences_tokens)]\n",
-    "\n",
-    "    temp_events_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(events_)]\n",
-    "    events_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_events_tokens)]\n",
-    "\n",
-    "    return sentences_tokens, events_tokens\n",
-    "\n",
-    "\n",
-    "def lemmatize_input(sentences_, events_):\n",
-    "    lemmatizer = Lemmatizer()\n",
-    "\n",
-    "    sentences_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(sentences_tokens)]\n",
-    "    events_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(events_tokens)]\n",
-    "\n",
-    "    return sentences_lemmatied, events_lemmatied    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 5706.54it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 2779.53it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 4224.72it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 8867.45it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 15592.21it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 12799.22it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 79287.41it/s]\n",
-      "100%|██████████| 1/1 [00:00<00:00, 15141.89it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 78106.22it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 13672.12it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 4639.15it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 5726.01it/s]\n"
      ]
     }
    ],
    "source": [
-    "sentences_normalized, events_normalized = normalize_inputs(sentences, events)\n",
-    "sentences_tokenized, events_tokenized = tokenize_inputs(sentences_normalized, events_normalized)\n",
-    "sentences_lemmatized, events_lemmatized = lemmatize_input(sentences_tokenized, events_tokenized)"
+    "\"\"\"normalizing the text\"\"\"\n",
+    "\n",
+    "from __future__ import unicode_literals\n",
+    "from hazm import *\n",
+    "\n",
+    "normalizer = Normalizer()\n",
+    "# normalizing by sentence to get a better result\n",
+    "sentences_normalized_by_sentence = [normalizer.normalize(' '.join(x)) for x in tqdm.tqdm(sentences)]\n",
+    "# normalizing by words\n",
+    "sentences_normalized_by_word = [[normalizer.normalize(y) for y in x.strip().split()] for x in tqdm.tqdm(sentences_normalized_by_sentence)]\n",
+    "\n",
+    "events_normalized = [[normalizer.normalize(y) for y in x] for x in tqdm.tqdm(events)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:00<00:00, 46.39it/s]\n",
+      "100%|██████████| 9/9 [00:00<00:00, 76881.34it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 24132.93it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 174037.51it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"tokenizing the text\"\"\"\n",
+    "\n",
+    "from nltk.tokenize import RegexpTokenizer\n",
+    "\n",
+    "tokenizer = RegexpTokenizer(r'\\w+')\n",
+    "sentences_no_punctuation = [tokenizer.tokenize(' '.join(sent)) for sent in sentences_normalized_by_word ]\n",
+    "temp_sentences_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(sentences_no_punctuation)]\n",
+    "sentences_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_sentences_tokens)]\n",
+    "\n",
+    "temp_events_tokens = [[word_tokenize(sent) for sent in sents] for sents in tqdm.tqdm(events_normalized)]\n",
+    "events_tokens = [[(word[0] if len(word) else '') for word in sent] for sent in tqdm.tqdm(temp_events_tokens)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9/9 [00:00<00:00, 41300.59it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 51337.87it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"lemmatization of the text\"\"\"\n",
+    "\n",
+    "lemmatizer = Lemmatizer()\n",
+    "\n",
+    "sentences_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(sentences_tokens)]\n",
+    "events_lemmatied = [[lemmatizer.lemmatize(word) for word in sent if len(word) != 0] for sent in tqdm.tqdm(events_tokens)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from zeep import Client\n",
     "from requests.auth import HTTPBasicAuth\n",
     "from requests import Session\n",
-    "from zeep.transports import Transport\n",
-    "\n",
-    "def connect_to_fars_net(username_, token_):\n",
-    "    # address of FarsNet's web services\n",
-    "    wsdl_sense_service = 'http://nlp.sbu.ac.ir:8180/WebAPI/services/SenseService?WSDL'\n",
-    "    wsdl_synset_service = 'http://nlp.sbu.ac.ir:8180/WebAPI/services/SynsetService?WSDL'\n",
-    "\n",
-    "\n",
-    "    # username and token needed for authentication. You can get this token by signing up on http://farsnet.nlp.sbu.ac.ir\n",
-    "    username = username_\n",
-    "    token = token_\n",
-    "    # token = 'd428eab3-3b91-11eb-8a1e-080027d731c1'\n",
-    "\n",
-    "    # connecting client\n",
-    "    session = Session()\n",
-    "    session.auth = HTTPBasicAuth(username, token)\n",
-    "    client_sense_service = Client(wsdl_sense_service, transport=Transport(session=session))\n",
-    "    client_synset_service = Client(wsdl_synset_service, transport=Transport(session=session))\n",
-    "\n",
-    "    return client_sense_service, client_synset_service\n",
-    "\n",
-    "def get_synset_id(sentences_, client_synset_service_, token_):\n",
-    "    return [[client_synset_service_.service.getSynsetsByWord(token_, 'EXACT', word) for word in sent] for sent in tqdm.tqdm(sentences_)]"
+    "from zeep.transports import Transport"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "token = 'd428eab3-3b91-11eb-8a1e-080027d731c1'\n",
+    "# address of FarsNet's web services\n",
+    "wsdl_sense_service = 'http://nlp.sbu.ac.ir:8180/WebAPI/services/SenseService?WSDL'\n",
+    "wsdl_synset_service = 'http://nlp.sbu.ac.ir:8180/WebAPI/services/SynsetService?WSDL'\n",
+    "\n",
+    "\n",
+    "# username and token needed for authentication. You can get this token by signing up on http://farsnet.nlp.sbu.ac.ir\n",
     "username = '12356'\n",
-    "client_sense_service, client_synset_service = connect_to_fars_net(username, token)\n",
-    "get_synset_id(sentences_lemmatized, client_synset_service, token)"
+    "token = 'd428eab3-3b91-11eb-8a1e-080027d731c1'\n",
+    "\n",
+    "# connecting client\n",
+    "session = Session()\n",
+    "session.auth = HTTPBasicAuth(username, token)\n",
+    "client_sense_service = Client(wsdl_sense_service, transport=Transport(session=session))\n",
+    "client_synset_service = Client(wsdl_synset_service, transport=Transport(session=session))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:10<00:00, 10.20s/it]\n"
+      "100%|██████████| 9/9 [02:05<00:00, 13.99s/it]\n"
      ]
     }
    ],
@@ -177,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [01:52<00:00, 11.24s/it]\n"
+      "100%|██████████| 10/10 [01:51<00:00, 11.17s/it]\n"
      ]
     }
    ],
@@ -196,15 +205,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:00<00:00, 6307.22it/s]\n",
-      "100%|██████████| 10/10 [00:00<00:00, 31000.03it/s]\n"
+      "100%|██████████| 9/9 [00:00<00:00, 16571.00it/s]\n",
+      "100%|██████████| 10/10 [00:00<00:00, 21879.52it/s]\n"
      ]
     }
    ],
@@ -217,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,12 +312,12 @@
     "    for i in range(len(sentences_input)):\n",
     "        initial_index = ' '.join(sentences_input[i]).find(sentences_tokens_input[i][sentences_main_word_index_input[i]])\n",
     "        span_list.append([initial_index, initial_index + len(sentences_input[i][sentences_main_word_index_input[i]])])\n",
-    "    return span_list\n"
+    "    return span_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,27 +334,31 @@
     "sentence_event_similarity = calculate_sentence_event_similarity(similarity_list)\n",
     "\n",
     "sentences_main_word_index = find_main_span(word_event_similarity)\n",
-    "related_event = [np.argmax(sentence) for sentence in sentence_event_similarity]\n",
-    "main_word_span = convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens)"
+    "\n",
+    "related_event = [np.argmax(sentence) for sentence in sentence_event_similarity]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "related_event:  [4]\n",
-      "main_word_span [[0, 8]]\n"
+      "related_event:  [4, 3, 2, 8, 1, 9, 0, 5, 7]\n",
+      "\n",
+      "main_word_span [[0, 8], [11, 18], [21, 26], [11, 17], [27, 33], [40, 46], [0, 5], [33, 38], [51, 54]]\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "print(\"related_event: \", related_event)\n",
-    "print(\"main_word_span\", main_word_span)"
+    "print()\n",
+    "print(\"main_word_span\", convert_word_pos_to_span(sentences_main_word_index, sentences, sentences_tokens))\n",
+    "print()"
    ]
   }
  ],
